--- a/____foundation/base/templates/base/home.html
+++ b/____foundation/base/templates/base/home.html
@@ -31,7 +31,7 @@
     <div class="choice_area">
       <a href="" class="choice_place">Bible - where you read the bible</a>
       <a href="" class="choice_place">Form - where you ask and answer questions</a>
-      <a href="" class="choice_place">Goals - biblical Goals</a>
+      <a href="{% url 'goals_home' %}" class="choice_place">Goals - biblical Goals</a>
       <a href="" class="choice_place">Videos - Videos (either sermons, soulwinning, tips, living righteous life, etc.)</a>
       <a href="" class="choice_place">Groups - create a group and achieve together (either reading, watching sermons, memorizing verses, etc)</a>
       <a href="" class="choice_place">triva - test your knowledge</a>
