--- a/____foundation/goals/static/goals/goals_home.css
+++ b/____foundation/goals/static/goals/goals_home.css
@@ -21,6 +21,9 @@ h1 {
 }
 
 /* list_goals ################# */
+.list_goals_title {
+  /* min-height: 70vh; */
+}
 .list_goals {
   border: 1px solid #000;
 }
@@ -33,13 +36,102 @@ h1 {
 }
 
 .goals {
-  padding: 0 2rem;
+  padding-left: 1rem;
 }
 
-.goals:nth-child(2n+1) {
-  background: var(--bg3);
+.goals:nth-child(even) {
+  background-color: var(--bg3);
 }
 
-.goals:nth-child(2n+2) {
-  background: var(--bg2);
+.goals:nth-child(even):hover {
+  background-color: var(--bg1);
+}
+
+.goals:nth-child(odd) {
+  background-color: var(--bg2);
+}
+.goals:nth-child(odd):hover {
+  background-color: var(--bg1);
+}
+
+
+/* calendar ################################# */
+.calendar_container {
+  width: 100%;
+  height: 100%;
+  background-color: #12121f;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar_area {
+  background-color: #22227;
+  width: 100%;
+}
+
+.month {
+  width: 100%;
+  height: 12rem;
+  background-color: #167e56;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+}
+
+.month i {
+  font-size: 2.5rem;
+  cursor: pointer;
+}
+
+.month h1 {
+  font-size: 3rem;
+  font-weight: 400;
+}
+
+
+.weekdays {
+  width: 100%;
+  height: 5rem;
+  padding: 0 0.4rem;
+  display: flex;
+  align-items: center;
+}
+
+.weekdays div {
+  flex-basis: 14.286%;  /* 1/7 = 0.142857 = 14.286% */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.days {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.2rem;
+}
+
+.days div {
+  margin: 1rem 0 ;
+  width: 14.286%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.5s ease;
+}
+
+.days div:hover:not(.today) {
+  background-color: #262626;
+}
+
+.prev-date,
+.next-date {
+  opacity: 0.5;
+}
+
+.today {
+  background-color: #167e56;
 }
