--- a/____foundation/base/templates/base/home.html
+++ b/____foundation/base/templates/base/home.html
@@ -35,7 +35,7 @@
       <a href="" class="choice_place">Videos - Videos (either sermons, soulwinning, tips, living righteous life, etc.)</a>
       <a href="" class="choice_place">Groups - create a group and achieve together (either reading, watching sermons, memorizing verses, etc)</a>
       <a href="" class="choice_place">triva - test your knowledge</a>
-      <a href="" class="choice_place">Todo list - list the things you want to do</a>
+      <a href="" class="choice_place">Daily Todo list</a>
       <a href="" class="choice_place">Events - where and when (even patitions for future events)</a>
       <a href="" class="choice_place">Near daily blog</a>
     </div>
