Add goal complete might move the add part to the home page Will continue with notes part tomorrow

--- a/____foundation/dailyGoals/static/dg/dg_add.css
+++ b/____foundation/dailyGoals/static/dg/dg_add.css
@@ -1,3 +1,14 @@
 h1 {
   text-align: center;
 }
+
+.goal_area {
+  text-align: center;
+  padding: 2rem;
+  background-color: #f0f0f0;
+}
+
+.edit-goal {
+  background-color: #000;
+  color: white;
+}
