--- a/____foundation/dailyGoals/static/dg/dg_home.css
+++ b/____foundation/dailyGoals/static/dg/dg_home.css
@@ -2,21 +2,36 @@ h1 {
   text-align: center;
 }
 
-.add_goal {
+.goals_zone {
+  padding-bottom: 5rem;
+}
+
+.add_area {
   text-align: center;
   padding: 0.2rem;
   background: AntiqueWhite;
   width: 90%;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.add_goal_link {
+  flex-basis: 50%;
+}
+
+.add_note_link {
+  flex-basis: 50%;
 }
 
 .add_goal:hover {
   background-color: lightgreen;
 }
 
-.add_goal_link:active > .add_goal {
-  background-color: lightblue;
+.add_note:hover {
+  background-color: lightgreen;
 }
 
 
@@ -27,11 +42,45 @@ h1 {
 }
 
 .goals {
-  flex-basis: 19.8%;  /* margin gets 0.2% */
+  flex-basis: 49.8%;  /* margin gets 0.2% */
   margin: 0.1%;
   min-height: 4rem;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: lightblue;
+}
+
+.goal-Walking {
+  /* display: none; */
+}
+.goal_name {
+  flex-basis: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+}
+
+.options {
+  flex-basis: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.hide_me {
+  display: none;
+}
+
+.form_hide {
+  display: none;
+}
+
+.show_me {
+  display: flex;
 }
