can upload verses correctly

--- a/____foundation/base/templates/base/home.html
+++ b/____foundation/base/templates/base/home.html
@@ -38,6 +38,9 @@
       <a href="" class="choice_place">Daily Todo list</a>
       <a href="" class="choice_place">Events - where and when (even patitions for future events)</a>
       <a href="" class="choice_place">Near daily blog</a>
+      <a href="" class="choice_place">Something</a>
+      <a href="" class="choice_place">Something</a>
+      <a href="{% url 'mp_home' %}" class="choice_place">Memory Palace</a>
     </div>
   </div>
 </div>
